[package]
name = "rust-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
dashmap = "5.5.3"
serde_json = { version = "1.0.113", features = [] }
serde = "1.0.196"


